# Forester

./: .gitignore  CMakeLists.txt
assets/: water.fs
assets/Map/: main.tmx  project.tiled-session  tiles.tsx
include/: animation.h  assets.h  components.h  debug.h  game.h  map.h  systems.h  textures.h  tmx.h
include/entity/: factory.h  render.h
src/: animation.cpp  assets.cpp  components.cpp  game.cpp  main.cpp  map.cpp  systems.cpp  textures.cpp  tmx.cpp
src/entity/: factory.cpp  render.cpp
